--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ opt-level = 3
 [dependencies]
 # bevy = { version = "0.10", features = ["dynamic_linking"] }
 bevy = { version = "0.10" }
+bevy_turborand = "0.5.0"
 bevy_vector_shapes = "0.4.3"
